[gd_scene load_steps=3 format=3 uid="uid://cgwc1h3ofpoc7"]

[ext_resource type="Script" path="res://user_interface.gd" id="1_ub7dm"]
[ext_resource type="PackedScene" uid="uid://315uis8lx0om" path="res://health_container.tscn" id="1_y2hbj"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_ub7dm")

[node name="HealthContainer" parent="." instance=ExtResource("1_y2hbj")]
scale = Vector2(1.10057, 0.892024)

[node name="GameOver" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.027451, 0.00784314, 0.886275)

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -11.5
offset_right = 65.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER BUD"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
